welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:10: error: value baisseBrosse is not a member of Unit
                                                                   baisseBrosse(); leveBrosse();avance();setCouleurBrosse(T((i+1+decal)%getMondeHauteur)) baisseBrosse();leveBrosse()}
                                                                                                                                                          ^